--- a/src/app/components/item/item.component.html
+++ b/src/app/components/item/item.component.html
@@ -2,6 +2,7 @@
 <table border="1">
   <thead>
     <tr>
+      <th>ID</th>
       <th>Item Name</th>
       <th>Quantity</th>
       <th>Price</th>
@@ -9,10 +10,10 @@
   </thead>
   <tbody>
     <tr *ngFor="let item of items">
+      <td>{{ item.id }}</td>
       <td>{{ item.name }}</td>
       <td>{{ item.quantity }}</td>
       <td>${{ item.price }}</td>
     </tr>
   </tbody>
 </table>
-<app-item></app-item>
